fluxcd/01-infrastructure/tailscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale
  labels:
    app.kubernetes.io/name: tailscale
    app.kubernetes.io/managed-by: flux
